--- a/Theme-matching bookmark bar separators/userChrome.css
+++ b/Theme-matching bookmark bar separators/userChrome.css
@@ -1,18 +1,18 @@
 /*Theme-matching bookmark bar separators*/
-  toolbarseparator
+  #PlacesToolbarItems toolbarseparator
   {
     -moz-appearance: none !important;
     border-image-slice: 1 !important;
     border-inline-start-style: solid !important;
     border-inline-start-width: 1px !important;
   }
-  toolbarseparator:-moz-lwtheme-darktext
+  #PlacesToolbarItems toolbarseparator:-moz-lwtheme-darktext
   {
     border-image-source: linear-gradient(rgba(0, 0, 0, 0) 4px, rgba(0, 0, 0, 0.1) 4px, 
         rgba(0, 0, 0, 0.1) calc(-4px + 100%), rgba(0, 0, 0, 0) calc(-4px + 100%)) !important;
     border-inline-start-color: rgb(24, 25, 26) !important;
   }
-  toolbarseparator:-moz-lwtheme-brighttext
+  #PlacesToolbarItems toolbarseparator:-moz-lwtheme-brighttext
   {
     border-image-source: linear-gradient(rgba(0, 0, 0, 0) 4px, rgba(255, 255, 255, 0.2) 4px, 
         rgba(255, 255, 255, 0.2) calc(-4px + 100%), rgba(0, 0, 0, 0) calc(-4px + 100%)) !important;
