--- a/Larger bookmark bar/userChrome.css
+++ b/Larger bookmark bar/userChrome.css
@@ -1,8 +1,10 @@
-/*Bookmark bar padding*/
+/*Bookmark bar spacing*/
 #PlacesToolbarItems toolbarbutton.bookmark-item
 {
-  padding-top: 6px !important;
-  padding-bottom: 6px !important;
-  padding-left: 6px !important;
-  padding-right: 6px !important;
+  margin: 1px 2px !important;
+  padding: 5px !important;
+}
+#PlacesToolbarItems toolbarseparator
+{
+  margin: 0 5px !important;
 }
