Seems good to me

--- a/Miscellaneous/userChrome.css
+++ b/Miscellaneous/userChrome.css
@@ -1,9 +1,9 @@
-  /* Square toolbar buttons */
-  :root {
-    --toolbarbutton-border-radius: 0 !important;
-  }
+/* Square toolbar buttons */
+:root {
+  --toolbarbutton-border-radius: 0 !important;
+}
   
-  /* Dark url bar */
-  #urlbar {
-    background: #212121 !important;
-  }
+/* Darker url bar */
+#urlbar {
+  background: rgb(37,37,39) !important;
+}
