--- a/Dark context menus/userChrome.css
+++ b/Dark context menus/userChrome.css
@@ -42,6 +42,35 @@ menupopup:not(.PanelUI-subView),
   border-color: var(--uc-menu-border) !important;
 }
 
+.menu-iconic-left, .menu-iconic-text {
+  color: var(--uc-menu-color) !important;
+}
+
+menu:hover:not(.panel-subview-footer),
+menu[_moz-menuactive]:not(.panel-subview-footer),
+menu[open]:not(.panel-subview-footer),
+menuitem:hover:not(.panel-subview-footer),
+menuitem[_moz-menuactive]:not(.panel-subview-footer){ background-color: var(--uc-menu-dimmed) !important; color: inherit !important; }
+
+menu:not(.subviewbutton) > .menu-right{ filter: invert(1) }
+
+.menu-iconic-left[disabled="true"], 
+.menu-iconic-text[disabled="true"], 
+.bookmark-item[disabled="true"],
+.menu-iconic[disabled="true"],
+.menuitem-iconic[disabled="true"],
+menu[disabled="true"],
+menuitem[disabled="true"],
+.menu-iconic-left[disabled="true"][_moz-menuactive], 
+.menu-iconic-text[disabled="true"][_moz-menuactive], 
+.bookmark-item[disabled="true"][_moz-menuactive],
+.menu-iconic[disabled="true"][_moz-menuactive],
+.menuitem-iconic[disabled="true"][_moz-menuactive],
+menu[disabled="true"][_moz-menuactive],
+menuitem[disabled="true"][_moz-menuactive]{
+  color: var(--uc-menu-disabled) !important;
+}
+
 menupopup:not(.PanelUI-subView) {
   padding: 4px 0px !important;
 }
@@ -53,10 +82,6 @@ menupopup menuitem:not(.subviewbutton), menupopup menu:not(.subviewbutton),
 
 #context-navigation{
   padding: 0px !important;
-}
-
-.menu-iconic-left, .menu-iconic-text {
-  color: var(--uc-menu-color) !important;
 }
 
 #BMB_bookmarksPopup menupopup[placespopup="true"]{
@@ -103,17 +128,6 @@ treechildren::-moz-tree-separator {
     margin-inline-start: 6px !important;
     margin-inline-end: 7px !important;
 }
-
-menu:hover:not(.panel-subview-footer),
-menu[_moz-menuactive]:not(.panel-subview-footer),
-menu[open]:not(.panel-subview-footer),
-menuitem:hover:not(.panel-subview-footer),
-menuitem[_moz-menuactive]:not(.panel-subview-footer){ background-color: var(--uc-menu-dimmed) !important; color: inherit !important; }
-
-menu[disabled="true"],
-menuitem[disabled="true"]{ color: var(--uc-menu-disabled) !important; }
-
-menu:not(.subviewbutton) > .menu-right{ filter: invert(1) }
 
 .customization-uidensity-menuitem {
     max-height: none !important;
