--- a/Miscellaneous/userChrome.css
+++ b/Miscellaneous/userChrome.css
@@ -29,3 +29,15 @@
 #tabbrowser-tabs {
   --tab-loading-fill: var(--browser-ui-highlight-color) !important;
 }
+
+/*-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-|-*/
+
+/* Toolbar button border radius */
+
+:root {
+  --toolbarbutton-border-radius: 5px !important; /* Hides part of the icon over 8px. */
+  }
+  
+.close-icon {
+  border-radius: 5px !important; /* Cannot go under 2px. Reason: SVG fill, not bg color. */
+}
