--- a/Miscellaneous/userChrome.css
+++ b/Miscellaneous/userChrome.css
@@ -15,3 +15,8 @@
 .close-icon {
   border-radius: 5px !important; /* Cannot go under 2px. Reason: SVG fill, not bg color. */
 }
+
+#urlbar:not(.megabar), #urlbar.megabar > #urlbar-background, #searchbar {
+  background-color: rgba(0, 0, 0, 0) !important;
+  border: none !important;
+}
