--- a/Miscellaneous/userChrome.css
+++ b/Miscellaneous/userChrome.css
@@ -33,16 +33,26 @@
 
 /* F***ing back button */
 
-:root:not([uidensity=compact]) #back-button {
-  padding-inline-start: 3px !important;
+:root:not([uidensity="compact"]) #back-button {
+  border-radius: unset !important;
+  margin-left: 2px !important;
+  padding-right: 3px !important;
 }
-:root:not([uidensity=compact]) #back-button > .toolbarbutton-icon {
+:root:not([uidensity="compact"]) #back-button > .toolbarbutton-icon {
   background-color: unset !important;
   border: unset !important;
-  padding: var(--toolbarbutton-inner-padding) !important;
   border-radius: var(--toolbarbutton-border-radius) !important;
   width: 28px !important;
   height: 28px !important;
+  padding: 6px !important;
+}
+:root[uidensity="touch"] #back-button {
+  margin-left: 4px !important;
+}
+:root[uidensity="touch"] #back-button > .toolbarbutton-icon {
+  width: 34px !important;
+  height: 34px !important;
+  padding: 9px !important;
 }
 :root:not([uidensity="compact"]) #back-button:hover:not([disabled]) > .toolbarbutton-icon {
   background-color: var(--toolbarbutton-hover-background) !important;
