--- a/old/chrome/userChrome.css
+++ b/old/chrome/userChrome.css
@@ -1,48 +1,4 @@
 @-moz-document url(chrome://browser/content/browser.xhtml) {
-  
-  /*Clean dark mode*/
-  
-  :root {
-    --toolbar-bgcolor: rgb(32, 32, 39) !important;
-    --lwt-toolbar-field-background-color: rgb(43,43,52) !important;
-    --lwt-toolbar-field-focus: var(--lwt-toolbar-field-background-color) !important;   
-    --lwt-toolbarbutton-hover-background: rgba(249,249,250,.1) !important;
-    --lwt-toolbarbutton-active-background: rgba(249,249,250,.15) !important;
-    --chrome-content-separator-color: rgb(43,43,52) !important;
-  }
-  
-  .findbar-find-previous, .findbar-find-next{
-    background: var(--lwt-toolbar-field-background-color) !important;
-  }
-  
-  .findbar-find-previous:hover, .findbar-find-next:hover{
-    background: rgba(255,255,255,.15) !important;
-  }
-  
-  .findbar-find-previous:active, .findbar-find-next:active{
-    background: rgba(255,255,255,.20) !important;
-  }
-  
-  #urlbar:-moz-lwtheme>#urlbar-background,
-  #navigator-toolbox #searchbar:-moz-lwtheme {
-    background: none !important;
-  }
-  
-  #urlbar:not(.megabar),
-  #urlbar.megabar>#urlbar-background,
-  #searchbar {
-    background-color: var(--lwt-toolbar-field-background-color) !important;
-    border: unset !important;
-  }
-  
-  #urlbar-background, #searchbar {
-    box-shadow: none !important;
-  }
-  
-  #navigator-toolbox:-moz-lwtheme {
-    --tabs-border-color: rgba(0,0,0,0) !important;
-  }
-  
   /* Url bar and tab focus color */
 
   :root {
@@ -83,29 +39,12 @@
   /* Dark context menus */
 
   :root {
-    --uc-menu-bkgnd: rgb(29, 29, 36);
+    --uc-menu-bkgnd: rgb(74, 74, 79);
     --uc-menu-color: rgb(249, 249, 250);
     --uc-menu-dimmed: rgba(249, 249, 250, 0.1);
     --uc-menu-disabled: rgba(249, 249, 250, 0.5);
     --uc-menu-separator: rgba(249, 249, 250, 0.1);
-    --uc-menu-border: rgba(249, 249, 250, 0.1);
-    --arrowpanel-background: rgb(29, 29, 36) !important;
-    --arrowpanel-dimmed: rgba(249,249,250,.1) !important;
-    --arrowpanel-dimmed-further: rgba(249,249,250,.15) !important;
-    --arrowpanel-dimmed-even-further: rgba(249,249,250,.20) !important;
-    --arrowpanel-border-color: rgba(249, 249, 250, 0.1) !important;
-  }
-  
-  .subviewbutton.panel-subview-footer {
-    background: var(--arrowpanel-background) !important;
-  }
-  
-  .subviewbutton.panel-subview-footer:hover {
-    background: var(--arrowpanel-dimmed) !important;
-  }
-  
-  .subviewbutton.panel-subview-footer:active {
-    background: var(--arrowpanel-dimmed-further) !important;
+    --uc-menu-border: rgb(39, 39, 43);
   }
 
   menupopup,
@@ -300,26 +239,34 @@
     padding: 0 6px 2px !important;
   }
 
+  /* Darker url bar */
+
+  #urlbar:-moz-lwtheme>#urlbar-background,
+  #navigator-toolbox #searchbar:-moz-lwtheme {
+    background-color: rgb(37, 37, 39) !important;
+  }
+
   /* Toolbar button border radius */
 
   :root {
-    --toolbarbutton-border-radius: 0px !important;
+    --toolbarbutton-border-radius: 6px !important;
     /* Hides part of the icon over 8px. */
   }
 
-  .close-icon, .findbar-closebutton > image {
-    border-radius: 9px !important;
-    height: 18px !important;
-    width: 18px !important;
+  .close-icon {
+    border-radius: 6px !important;
     /* Cannot go under 2px. Reason: SVG fill, not bg color. */
   }
 
   .searchbar-engine-one-off-item {
-    border-radius: 0px !important;
+    border-radius: 6px !important;
   }
-  
-  .findbar-textbox, .findbar-find-next {
-    border-radius: 0px !important;
+
+  #urlbar:not(.megabar),
+  #urlbar.megabar>#urlbar-background,
+  #searchbar {
+    background-color: rgba(0, 0, 0, 0) !important;
+    border: unset !important;
   }
 
   /* Theme-matching bookmark bar separators */
@@ -400,13 +347,7 @@
   }
 
   /* DISPLAY GO BUTTON WHEN TYPING END */
-  
-  /* REMOVE ONE-OFFS PADDING */
-  
-  #urlbar .search-one-offs:not([hidden]) {
-    padding-block: 5px !important;
-  }
-  
+
   /* REMOVE MEGABAR END */
 
 
