--- a/userContent.css
+++ b/userContent.css
@@ -1,3 +1,3 @@
 @-moz-document url(about:home), url(about:newtab) {  
-    body{--newtab-background-color: rgb(31, 31, 35) !important;}
+    body{--newtab-background-color: rgb(43,43,52) !important;}
 }
